Cambié el index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hola mendoza futura</h1>
+    <h1>ASKJDHLKAJSDKLASJLKDAJKLSD</h1>
 </body>
 </html>
